Assertion failure: false (MOZ_ASSERT_UNREACHABLE: A consumer was not explicitly removed), at /builds/worker/checkouts/gecko/dom/media/MediaStreamTrack.cpp:525
Categories
(Core :: WebRTC: Audio/Video, defect, P3)
Tracking
()
People
(Reporter: jkratzer, Assigned: pehrsons)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression, testcase, Whiteboard: [bugmon:bisected,confirmed])
Attachments
(2 files)
Testcase found while fuzzing mozilla-central rev fb9c01b719fa (built with --enable-debug).
Assertion failure: false (MOZ_ASSERT_UNREACHABLE: A consumer was not explicitly removed), at /builds/worker/checkouts/gecko/dom/media/MediaStreamTrack.cpp:525
#0 0x7f7009bd7054 in mozilla::dom::MediaStreamTrack::RemoveConsumer(mozilla::dom::MediaStreamTrackConsumer*) /builds/worker/checkouts/gecko/dom/media/MediaStreamTrack.cpp:525:5
#1 0x7f7009f37960 in mozilla::dom::MediaStreamTrackAudioSourceNode::Destroy() /builds/worker/checkouts/gecko/dom/media/webaudio/MediaStreamTrackAudioSourceNode.cpp:116:18
#2 0x7f7009f3777f in mozilla::dom::MediaStreamTrackAudioSourceNode::cycleCollection::Unlink(void*) /builds/worker/checkouts/gecko/dom/media/webaudio/MediaStreamTrackAudioSourceNode.cpp:22:8
#3 0x7f70062badbf in nsCycleCollector::CollectWhite() /builds/worker/checkouts/gecko/xpcom/base/nsCycleCollector.cpp:3083:26
#4 0x7f70062bc179 in nsCycleCollector::Collect(ccType, js::SliceBudget&, nsICycleCollectorListener*, bool) /builds/worker/checkouts/gecko/xpcom/base/nsCycleCollector.cpp:3432:24
#5 0x7f70062be899 in nsCycleCollector_collectSlice(js::SliceBudget&, bool) /builds/worker/checkouts/gecko/xpcom/base/nsCycleCollector.cpp:3920:21
#6 0x7f7008241c1c in nsJSContext::RunCycleCollectorSlice(mozilla::TimeStamp) /builds/worker/checkouts/gecko/dom/base/nsJSEnvironment.cpp:1590:3
#7 0x7f70082422ee in ICCRunnerFired(mozilla::TimeStamp) /builds/worker/checkouts/gecko/dom/base/nsJSEnvironment.cpp:1640:3
#8 0x7f700636ddc6 in operator() /builds/worker/fetches/clang/bin/../lib/gcc/x86_64-unknown-linux-gnu/7.4.0/../../../../include/c++/7.4.0/bits/std_function.h:706:14
#9 0x7f700636ddc6 in mozilla::IdleTaskRunner::Run() /builds/worker/checkouts/gecko/xpcom/threads/IdleTaskRunner.cpp:54:14
#10 0x7f70063802ef in mozilla::RunnableTask::Run() /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:242:16
#11 0x7f700637e36a in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:512:26
#12 0x7f700637d576 in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:394:15
#13 0x7f700637d677 in mozilla::TaskController::ProcessPendingMTTask(bool) /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:168:36
#14 0x7f7006385026 in operator() /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:83:37
#15 0x7f7006385026 in mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal()::$_4>::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:577:5
#16 0x7f700639842f in nsThread::ProcessNextEvent(bool, bool*) /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:1234:14
#17 0x7f700639ddda in NS_ProcessNextEvent(nsIThread*, bool) /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.cpp:513:10
#18 0x7f7006c96016 in mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:87:21
#19 0x7f7006c08c33 in MessageLoop::RunInternal() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:334:10
#20 0x7f7006c08b4d in RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:327:3
#21 0x7f7006c08b4d in MessageLoop::Run() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:309:3
#22 0x7f700a898c48 in nsBaseAppShell::Run() /builds/worker/checkouts/gecko/widget/nsBaseAppShell.cpp:137:27
#23 0x7f700c06f0b3 in XRE_RunAppShell() /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:913:20
#24 0x7f7006c96dd9 in mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*) /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:237:9
#25 0x7f7006c08c33 in MessageLoop::RunInternal() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:334:10
#26 0x7f7006c08b4d in RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:327:3
#27 0x7f7006c08b4d in MessageLoop::Run() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:309:3
#28 0x7f700c06ec98 in XRE_InitChildProcess(int, char**, XREChildData const*) /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:744:34
#29 0x557ea5701957 in content_process_main /builds/worker/checkouts/gecko/browser/app/../../ipc/contentproc/plugin-container.cpp:56:28
#30 0x557ea5701957 in main /builds/worker/checkouts/gecko/browser/app/nsBrowserApp.cpp:303:18
#31 0x7f701b91a0b2 in __libc_start_main /build/glibc-YYA7BZ/glibc-2.31/csu/../csu/libc-start.c:308:16
#32 0x557ea56df709 in _start (/home/worker/builds/m-c-20200903151816-fuzzing-debug/firefox-bin+0x17709)
Reporter | ||
Updated•5 years ago
|
Reporter | ||
Comment 1•5 years ago
|
||
Assignee | ||
Updated•5 years ago
|
Comment 2•5 years ago
|
||
A Pernosco session is available here: https://pernos.co/debug/Dzy0yM5K1SS8dVvL1bGvSg/index.html
Assignee | ||
Comment 3•5 years ago
|
||
This is a CC ordering thing. We can keep this assert by using a WeakPtr instead of using CC for PlaybackTrackListener.
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 4•5 years ago
|
||
Comment 6•5 years ago
|
||
bugherder |
Comment 7•5 years ago
|
||
Bugmon Analysis:
Bug marked as FIXED but still reproduces on mozilla-central 20210112155511-6da943baaccf.
Comment 8•5 years ago
|
||
:pehrsons, since this bug contains a bisection range, could you fill (if possible) the regressed_by field?
For more information, please visit auto_nag documentation.
Updated•5 years ago
|
Updated•5 years ago
|
Updated•4 years ago
|
Comment 9•4 years ago
|
||
Bugmon Analysis
Failed to bisect testcase (End build crashes!):
Start: fb9c01b719fac0644f1a3d25b4c9371d322d05d1 (20200908095243)
End: 2fc1d893c8517acd5c0b6fd6cd83fa897876bd01 (20210817160311)
BuildFlags: BuildFlags(asan=False, tsan=False, debug=True, fuzzing=False, coverage=False, valgrind=False, no_opt=False, fuzzilli=False)
Removing bugmon keyword as no further action possible. Please review the bug and re-add the keyword for further analysis.
Description
•