Bug 1663674 - Use WeakPtr instead of cycle collection in PlaybackTrackListener. r=jib

Differential Revision: https://phabricator.services.mozilla.com/D99934